# DanceAggregator

./: .gitignore  README.md  handler.py  package-lock.json  package.json  pyproject.toml  serverless.yml
dance_aggregator/: __init__.py  calendar.py  lib.py  main.py  models.py
dance_aggregator/studios/: cunningham.py  dance_wave.py  gibney.py  mark_morris.py  movement_research.py  peridance.py
tests/: test_dance_aggregator.py  test_integration.py
